--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -29798,5 +29798,69 @@
         "published": "Fri, 26 Dec 2025 17:13:38 +0530",
         "source": "Tech-Economic Times",
         "summary": "Nvidia has agreed to license technology from AI startup Groq for use in some of its artificial intelligence chips, marking the chipmaker's largest deal and \u200dunderscoring its push to strengthen competitiveness amid surging demand."
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/ars-technicas-top-20-video-games-of-2025/",
+        "title": "Ars Technica\u2019s Top 20 video games of 2025",
+        "link": "https://arstechnica.com/gaming/2025/12/ars-technicas-top-20-video-games-of-2025/",
+        "published": "Fri, 26 Dec 2025 12:00:09 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "A mix of expected sequels and out-of-nowhere indie gems made 2025 a joy."
+    },
+    {
+        "id": "https://blog.matthewbrunelle.com/im-a-laptop-weirdo-and-thats-why-i-like-my-new-framework-13/",
+        "title": "I'm a laptop weirdo and that's why I like my new Framework 13",
+        "link": "https://blog.matthewbrunelle.com/im-a-laptop-weirdo-and-thats-why-i-like-my-new-framework-13/",
+        "published": "Fri, 26 Dec 2025 12:27:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46391410\">Comments</a>"
+    },
+    {
+        "id": "https://aeon.co/essays/the-word-religion-resists-definition-but-remains-necessary",
+        "title": "Undefinable yet Indispensable",
+        "link": "https://aeon.co/essays/the-word-religion-resists-definition-but-remains-necessary",
+        "published": "Fri, 26 Dec 2025 13:23:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46391744\">Comments</a>"
+    },
+    {
+        "id": "https://build.ms/2025/12/22/codex-vs-claude-code-today/",
+        "title": "Codex vs. Claude Code (today)",
+        "link": "https://build.ms/2025/12/22/codex-vs-claude-code-today/",
+        "published": "Fri, 26 Dec 2025 12:22:26 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46391391\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/unplug-7-common-household-devices-reduce-electricity/",
+        "title": "Unplugging these 7 common household devices easily reduced my electricity bill",
+        "link": "https://www.zdnet.com/article/unplug-7-common-household-devices-reduce-electricity/",
+        "published": "Fri, 26 Dec 2025 13:00:51 GMT",
+        "source": "Latest news",
+        "summary": "You might be shocked at how many 'vampire devices' could be in your home, silently draining power."
+    },
+    {
+        "id": "https://inc42.com/features/2026-ai-predictions-for-india-cost-control-and-clarity/",
+        "title": "2026 And The End Of AI Hype: Cost, Control, And Clarity",
+        "link": "https://inc42.com/features/2026-ai-predictions-for-india-cost-control-and-clarity/",
+        "published": "Fri, 26 Dec 2025 13:12:27 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"2026 And The End Of AI Hype: Cost, Control, And Clarity\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Indian-Tech-Outlook-AI-Predictions-ftr-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />In boardroom huddles between CXOs and cafe meetings between startup founders, AI is no longer the last word or a&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/cardekho-invests-10-mn-in-edtech-subsidiary-collegedekho/",
+        "title": "CarDekho Invests $10 Mn In Edtech Subsidiary CollegeDekho",
+        "link": "https://inc42.com/buzz/cardekho-invests-10-mn-in-edtech-subsidiary-collegedekho/",
+        "published": "Fri, 26 Dec 2025 12:35:54 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"CarDekho Invests $10 Mn In Edtech Subsidiary CollegeDekho\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/07/CollegeDekho-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />CarDekho Group, the parent company of autoclassifieds startups CarDekho and BikeDekho, has invested $10 Mn (INR 89.9 Cr) in its&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-indian-army-social-media-policy-passive-use-x-instagram-youtube/",
+        "title": "Indian Army Revises Social Media Policy, Allows Passive Use Of X, Instagram, YouTube",
+        "link": "https://www.medianama.com/2025/12/223-indian-army-social-media-policy-passive-use-x-instagram-youtube/",
+        "published": "Fri, 26 Dec 2025 12:20:47 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The Army has updated its social media use policy, allowing personnels to browse Instagram, YouTube, Quora, X to gain information but bars any kind of active participation like sharing, liking, commenting</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-indian-army-social-media-policy-passive-use-x-instagram-youtube/\">Indian Army Revises Social Media Policy, Allows Passive Use Of X, Instagram, YouTube</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
