📚 Auto-update: News data refreshed - 2025-12-26 14:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -29862,5 +29862,45 @@
         "published": "Fri, 26 Dec 2025 12:20:47 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The Army has updated its social media use policy, allowing personnels to browse Instagram, YouTube, Quora, X to gain information but bars any kind of active participation like sharing, liking, commenting</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-indian-army-social-media-policy-passive-use-x-instagram-youtube/\">Indian Army Revises Social Media Policy, Allows Passive Use Of X, Instagram, YouTube</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/26/these-are-the-cybersecurity-stories-we-were-jealous-of-in-2025/",
+        "title": "These are the cybersecurity stories we were jealous of in 2025",
+        "link": "https://techcrunch.com/2025/12/26/these-are-the-cybersecurity-stories-we-were-jealous-of-in-2025/",
+        "published": "Fri, 26 Dec 2025 14:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The very best reporting and investigative journalism from our friends at other publications."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/apple-will-allow-third-party-app-stores-and-payment-processing-in-brazil-135114824.html?src=rss",
+        "title": "Apple will allow third-party app stores and payment processing in Brazil",
+        "link": "https://www.engadget.com/big-tech/apple-will-allow-third-party-app-stores-and-payment-processing-in-brazil-135114824.html?src=rss",
+        "published": "Fri, 26 Dec 2025 13:51:15 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Brazilian regulators have <a href=\"https://www.gov.br/cade/pt-br/assuntos/noticias/cade-forma-maioria-pela-homologacao-de-tcc-em-investigacao-sobre-praticas-da-apple-no-ios\"><ins>reached a settlement</ins></a> with Apple after a yearslong investigation into the company's App Store fee practices as well as its policies against third-party app stores. As first reported by Brazilian tech site <a href=\"https://tecnoblog.net/noticias/apple-ainda-podera-cobrar-taxas-no-brasil-veja-aliquotas/\"><em><"
+    },
+    {
+        "id": "https://nesbitt.io/2025/12/24/package-managers-keep-using-git-as-a-database.html",
+        "title": "Package managers keep using Git as a database, it never works out",
+        "link": "https://nesbitt.io/2025/12/24/package-managers-keep-using-git-as-a-database.html",
+        "published": "Fri, 26 Dec 2025 12:46:36 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46391514\">Comments</a>"
+    },
+    {
+        "id": "https://www.nytimes.com/2025/12/19/books/james-baldwin-joan-didion-92ny-recordings.html",
+        "title": "Joan Didion and Kurt Vonnegut had something to say. We have it on tape",
+        "link": "https://www.nytimes.com/2025/12/19/books/james-baldwin-joan-didion-92ny-recordings.html",
+        "published": "Mon, 22 Dec 2025 06:17:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46351836\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/coforge-encora-2-3-bn-deal-zepto-ipo-papers-likely-this-week/articleshow/126190824.cms",
+        "title": "Coforge-Encora $2.3 bn deal; Zepto IPO papers likely this week",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/coforge-encora-2-3-bn-deal-zepto-ipo-papers-likely-this-week/articleshow/126190824.cms",
+        "published": "Fri, 26 Dec 2025 18:55:15 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "IT services company Coforge is acquiring US-based Encora in a multi-billion-dollar deal. This and more in today\u2019s ETtech Top 5."
     }
 ]
