📚 Auto-update: News data refreshed - 2025-12-26 15:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -29902,5 +29902,77 @@
         "published": "Fri, 26 Dec 2025 18:55:15 +0530",
         "source": "Tech-Economic Times",
         "summary": "IT services company Coforge is acquiring US-based Encora in a multi-billion-dollar deal. This and more in today\u2019s ETtech Top 5."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/26/the-9-top-cybersecurity-startups-from-disrupt-startup-battlefield/",
+        "title": "The 9 top cybersecurity startups from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2025/12/26/the-9-top-cybersecurity-startups-from-disrupt-startup-battlefield/",
+        "published": "Fri, 26 Dec 2025 15:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the cybersecurity Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/846767/amazon-prime-video-best-shows-2025",
+        "title": "The 10 best shows to stream on Amazon Prime Video from 2025",
+        "link": "https://www.theverge.com/entertainment/846767/amazon-prime-video-best-shows-2025",
+        "published": "2025-12-26T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Aside from free shipping, Prime Video is the second-best perk that comes with an Amazon Prime subscription. This year, the streaming service delivered several strong installments to some of its biggest series like Reacher, Fallout, and Invincible - but it also premiered some great new shows and spinoffs to keep things fresh. Here's a list [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/850242/lg-cloid-home-robot-chores-ces-2026",
+        "title": "LG teases a new chore-completing home robot",
+        "link": "https://www.theverge.com/news/850242/lg-cloid-home-robot-chores-ces-2026",
+        "published": "2025-12-26T09:48:33-05:00",
+        "source": "The Verge",
+        "summary": "LG is getting ready to take the wraps off a new robot it claims is capable of performing a \"wide range\" of household chores. The robot, called LG CLOiD, will make its debut at CES next month, featuring two articulated arms and five individually actuated fingers on each hand. Though we only have a description [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/in-the-90s-wing-commander-privateer-made-me-realize-what-kind-of-games-i-love/",
+        "title": "In the \u201990s, Wing Commander: Privateer made me realize what kind of games I love",
+        "link": "https://arstechnica.com/gaming/2025/12/in-the-90s-wing-commander-privateer-made-me-realize-what-kind-of-games-i-love/",
+        "published": "Fri, 26 Dec 2025 13:35:38 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Most things <em>Privateer</em> did have been done better, but it's still a classic."
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/lg-will-show-off-a-humanoid-robot-for-household-chores-at-ces-2026-145411218.html?src=rss",
+        "title": "LG will show off a humanoid robot for household chores at CES 2026",
+        "link": "https://www.engadget.com/home/smart-home/lg-will-show-off-a-humanoid-robot-for-household-chores-at-ces-2026-145411218.html?src=rss",
+        "published": "Fri, 26 Dec 2025 14:54:11 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>LG will present a <a href=\"https://www.lgnewsroom.com/2025/12/lg-to-unveil-home-robot-at-ces-2026-sharing-vision-for-the-zero-labor-home/\"><ins>home robot</ins></a> named CLOiD at <a href=\"https://www.engadget.com/big-tech/ces-2026-everything-were-expecting-from-techs-biggest-conference-in-january-120000106.html\"><ins>CES 2026</ins></a> in Las Vegas. With humanoid robotics sure to feature heavily at this year's tech conference, LG has teased its home assistant before a full unveiling in Janua"
+    },
+    {
+        "id": "https://www.learnix-os.com",
+        "title": "LearnixOS",
+        "link": "https://www.learnix-os.com",
+        "published": "Fri, 26 Dec 2025 12:59:56 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46391599\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/cardekho-group-invests-10-million-in-edtech-firm-collegedekho/articleshow/126191472.cms",
+        "title": "CarDekho Group invests $10 million in edtech firm CollegeDekho",
+        "link": "https://economictimes.indiatimes.com/tech/technology/cardekho-group-invests-10-million-in-edtech-firm-collegedekho/articleshow/126191472.cms",
+        "published": "Fri, 26 Dec 2025 19:35:03 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Founded in 2015, CollegeDekho operates an online platform that enables college discovery, course selection, entrance test preparation, and provides admissions support for students in India and overseas. The platform has partnerships with more than 2,000 universities and colleges."
+    },
+    {
+        "id": "https://inc42.com/buzz/indiamart-moves-calcutta-hc-against-openai-over-alleged-chatgpt-exclusion/",
+        "title": "IndiaMART Moves Calcutta HC Against OpenAI Over Alleged ChatGPT Exclusion",
+        "link": "https://inc42.com/buzz/indiamart-moves-calcutta-hc-against-openai-over-alleged-chatgpt-exclusion/",
+        "published": "Fri, 26 Dec 2025 14:57:05 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"IndiaMART To Invest Additional INR 14.3 Cr In Mobisy\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/11/indiamart-acquisiton-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />IndiaMART has moved the Calcutta High Court against OpenAI, alleging that its website and listings have been excluded from responses&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/zepto-gets-board-nod-to-raise-inr-11000-cr-via-ipo/",
+        "title": "Zepto Gets Board Nod To Raise INR 11,000 Cr Via IPO",
+        "link": "https://inc42.com/buzz/zepto-gets-board-nod-to-raise-inr-11000-cr-via-ipo/",
+        "published": "Fri, 26 Dec 2025 14:12:08 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Zepto IPO\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/zepto-palicha-featured.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Quick commerce startup Zepto has taken another formal step towards its highly anticipated initial public offering (IPO) by gaining its&#8230;"
     }
 ]
