--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -29974,5 +29974,61 @@
         "published": "Fri, 26 Dec 2025 14:12:08 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Zepto IPO\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/zepto-palicha-featured.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Quick commerce startup Zepto has taken another formal step towards its highly anticipated initial public offering (IPO) by gaining its&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/26/treat-yourself-the-best-smart-glasses-to-buy-with-your-holiday-gift-money/",
+        "title": "Treat yourself: The best smart glasses to buy with your holiday gift money",
+        "link": "https://techcrunch.com/2025/12/26/treat-yourself-the-best-smart-glasses-to-buy-with-your-holiday-gift-money/",
+        "published": "Fri, 26 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Whether you\u2019re looking to get a pair yourself or just want to explore what\u2019s available on the market today, we\u2019ve compiled a list of the most compelling pairs available."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/850279/cyberpunk-2077-ultimate-edition-and-other-nintendo-games-are-up-to-50-percent-off",
+        "title": "Cyberpunk 2077: Ultimate Edition and other Nintendo games are up to 50 percent off",
+        "link": "https://www.theverge.com/gadgets/850279/cyberpunk-2077-ultimate-edition-and-other-nintendo-games-are-up-to-50-percent-off",
+        "published": "2025-12-26T11:08:50-05:00",
+        "source": "The Verge",
+        "summary": "Unlike the day after Thanksgiving, when people are rushing online and to the stores to look for deals, the day after Christmas is usually a time to recover from the festivities and check your budget to see how much all that gifting has cost you. However, if you\u2019re in a shopping mood, or if you [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/850237/google-change-your-gmail-address",
+        "title": "Google is letting some people change their @gmail address",
+        "link": "https://www.theverge.com/news/850237/google-change-your-gmail-address",
+        "published": "2025-12-26T10:41:48-05:00",
+        "source": "The Verge",
+        "summary": "If you've been saddled with some awful Gmail address you chose in high school (looking at you, LazySexyCool3030), help appears to be on the way. According to a Google account support page in Hindi the company is allowing some people to change their email address. According to the page (via Google Translate): If your Google [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/our-favorite-books-we-read-in-2025-160000704.html?src=rss",
+        "title": "Our favorite books we read in 2025",
+        "link": "https://www.engadget.com/entertainment/our-favorite-books-we-read-in-2025-160000704.html?src=rss",
+        "published": "Fri, 26 Dec 2025 16:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>This was the kind of year that felt 100 years long, so who could blame us for leaning into a bit of escapism? Some of us buried our noses in books in 2025, and thankfully, there were plenty of good reads to get lost in. Here are some of the Engadget team\u2019s top picks from the year.</p><h2 id=\"8e61645a-aa5e-4e7d-9ad1-ec03b58ba868\"><em>Wild Dark Shore </em>by Charlotte McConaghy</h2><p><a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-029"
+    },
+    {
+        "id": "https://www.smithsonianmag.com/smart-news/high-school-student-discovers-1-5-million-potential-new-astronomical-objects-by-developing-an-ai-algorithm-180986429/",
+        "title": "High School Student Discovers 1.5M Potential New Astronomical Objects",
+        "link": "https://www.smithsonianmag.com/smart-news/high-school-student-discovers-1-5-million-potential-new-astronomical-objects-by-developing-an-ai-algorithm-180986429/",
+        "published": "Fri, 26 Dec 2025 15:13:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46392815\">Comments</a>"
+    },
+    {
+        "id": "https://acadlisp.de/noscript.html",
+        "title": "Show HN: AutoLISP interpreter in Rust/WASM \u2013 a CAD workflow invented 33 yrs ago",
+        "link": "https://acadlisp.de/noscript.html",
+        "published": "Fri, 26 Dec 2025 15:56:52 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46393271\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/ettech-deals-digest-startups-raise-1-billion-in-december-so-far-up-6-on-year/articleshow/126192395.cms",
+        "title": "ETtech Deals Digest: Startups raise $1 billion in December so far; up 6% on-year",
+        "link": "https://economictimes.indiatimes.com/tech/funding/ettech-deals-digest-startups-raise-1-billion-in-december-so-far-up-6-on-year/articleshow/126192395.cms",
+        "published": "Fri, 26 Dec 2025 21:04:53 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Startups across multiple stages raised the funds through 78 deals, compared to 103 in the year-ago period."
     }
 ]
