📚 Auto-update: News data refreshed - 2025-12-26 17:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30030,5 +30030,53 @@
         "published": "Fri, 26 Dec 2025 21:04:53 +0530",
         "source": "Tech-Economic Times",
         "summary": "Startups across multiple stages raised the funds through 78 deals, compared to 103 in the year-ago period."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/26/nawares-chemical-free-weed-killer-tech-could-change-how-we-treat-lawns/",
+        "title": "Naware\u2019s chemical-free weed killer tech could change how we treat lawns",
+        "link": "https://techcrunch.com/2025/12/26/nawares-chemical-free-weed-killer-tech-could-change-how-we-treat-lawns/",
+        "published": "Fri, 26 Dec 2025 17:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "A classic hardware startup, Naware's founders set out with a problem -- kill weeds without chemicals -- and relentlessly tinkered until they found a solution."
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/best-ipad-accessories-130018595.html?src=rss",
+        "title": "The best iPad accessories for 2025",
+        "link": "https://www.engadget.com/computing/accessories/best-ipad-accessories-130018595.html?src=rss",
+        "published": "Mon, 29 Sep 2025 09:01:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you want to upgrade your iPad experience, finding the best iPad accessories can do the trick. It's certainly much cheaper than buying a new tablet, and often times, all you need is a few well-chosen accessories to make a familiar device feel fresh again. From a slim folio for iPad that protects your screen to a Magic Keyboard case that turns it into a full-blown laptop alternative, there are dozens of solid accessories to choose from. Accessories aren't just about looks, either. Swapping o"
+    },
+    {
+        "id": "https://www.engadget.com/computing/you-may-soon-be-able-to-change-your-gmail-address-165633905.html?src=rss",
+        "title": "You may soon be able to change your Gmail address",
+        "link": "https://www.engadget.com/computing/you-may-soon-be-able-to-change-your-gmail-address-165633905.html?src=rss",
+        "published": "Fri, 26 Dec 2025 16:56:33 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A Google support page in Hindi says the ability to change your Gmail address is on the way. The feature would allow you to replace your current @<a class=\"link\" target=\"_blank\">gmail.com</a> address with another. Your old address would remain active as an alias on the account, and all your data would stick around, unaffected.</p><p>The <a class=\"link\" href=\"https://support.google.com/accounts/answer/19870\" target=\"_blank\">support page</a> (translated) says that &quot;the ability to change you"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/lg-announces-line-of-premium-gaming-monitors-that-offer-5k-visuals-165224945.html?src=rss",
+        "title": "LG announces line of premium gaming monitors that offer 5K visuals",
+        "link": "https://www.engadget.com/computing/accessories/lg-announces-line-of-premium-gaming-monitors-that-offer-5k-visuals-165224945.html?src=rss",
+        "published": "Fri, 26 Dec 2025 16:52:24 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>LG has revealed a new lineup of gaming monitors <a href=\"https://www.engadget.com/big-tech/ces-2026-everything-were-expecting-from-techs-biggest-conference-in-january-120000106.html\">just ahead of CES</a>. The UltraGear evo displays offer 5K visuals. Many incorporate on-device AI upscaling, taking some of the burden away from the GPU.&nbsp;</p>\n<p>LG says the tech will let consumers skip out on some card upgrades. This could end up being extremely beneficial because the AI boom has <a href=\"h"
+    },
+    {
+        "id": "https://tempblog-psi.vercel.app/",
+        "title": "Show HN: Private blogging and journaling with a simulated audience",
+        "link": "https://tempblog-psi.vercel.app/",
+        "published": "Fri, 26 Dec 2025 15:55:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46393262\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/my-11-favorite-linux-distributions-of-all-time-ranked/",
+        "title": "My 11 favorite Linux distributions of all time, ranked",
+        "link": "https://www.zdnet.com/article/my-11-favorite-linux-distributions-of-all-time-ranked/",
+        "published": "Fri, 26 Dec 2025 16:11:00 GMT",
+        "source": "Latest news",
+        "summary": "After using Linux for nearly 30 years, I've created a list of the best Linux distributions I've used since the beginning. Here they are."
     }
 ]
