📚 Auto-update: News data refreshed - 2025-12-26 19:09 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30126,5 +30126,37 @@
         "published": "Fri, 26 Dec 2025 22:21:19 +0530",
         "source": "Tech-Economic Times",
         "summary": "The business to be sold employs about 2,800 people in Brazil, Argentina, \u200bChile, Colombia, Peru \u200band Uruguay, Atos said, \u200cwithout \u200ddisclosing the financial details \u200dof the transaction. It expects \u200cto close the deal in the coming months."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/26/as-people-look-for-ways-to-make-new-friends-here-are-the-apps-promising-to-help/",
+        "title": "As people look for ways to make new friends, here are the apps promising to help",
+        "link": "https://techcrunch.com/2025/12/26/as-people-look-for-ways-to-make-new-friends-here-are-the-apps-promising-to-help/",
+        "published": "Fri, 26 Dec 2025 19:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "We've compiled a list of friendship apps, from friend discovery platforms like BFF to event-focused ones like Timeleft."
+    },
+    {
+        "id": "https://www.theverge.com/news/850398/rodeo-hinge-social-app-friends",
+        "title": "Rodeo is an app for making plans with friends you already have",
+        "link": "https://www.theverge.com/news/850398/rodeo-hinge-social-app-friends",
+        "published": "2025-12-26T13:53:04-05:00",
+        "source": "The Verge",
+        "summary": "There are plenty of dating apps out there, and apps that turn your chaos of work obligations into easily actionable lists. There is also a growing number of apps that help you make new friends. The pitch for Rodeo is a bit different in that it uses AI to help you schedule activities with your [&#8230;]"
+    },
+    {
+        "id": "https://nhmu.utah.edu/articles/experts-explore-new-mushroom-which-causes-fairytale-hallucinations",
+        "title": "Experts Explore New Mushroom Which Causes Fairytale-Like Hallucinations",
+        "link": "https://nhmu.utah.edu/articles/experts-explore-new-mushroom-which-causes-fairytale-hallucinations",
+        "published": "Fri, 26 Dec 2025 17:07:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46393936\">Comments</a>"
+    },
+    {
+        "id": "https://simonwillison.net/2025/Dec/26/slop-acts-of-kindness/",
+        "title": "Rob Pike got spammed with an AI slop \"act of kindness\"",
+        "link": "https://simonwillison.net/2025/Dec/26/slop-acts-of-kindness/",
+        "published": "Fri, 26 Dec 2025 18:42:13 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46394867\">Comments</a>"
     }
 ]
