📚 Auto-update: News data refreshed - 2025-12-26 21:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30190,5 +30190,29 @@
         "published": "Fri, 26 Dec 2025 10:31:56 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Backed by a \u20b95 lakh loan under the Uttar Pradesh Mukhyamantri Vikas Udyami Yojana, Rathore sets up a low-cost, training-led compost unit that supplies local farmers."
+    },
+    {
+        "id": "https://www.engadget.com/social-media/new-york-state-will-require-warning-labels-on-social-media-platforms-210306716.html?src=rss",
+        "title": "New York State will require warning labels on social media platforms",
+        "link": "https://www.engadget.com/social-media/new-york-state-will-require-warning-labels-on-social-media-platforms-210306716.html?src=rss",
+        "published": "Fri, 26 Dec 2025 21:03:06 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The State of New York will <a href=\"https://www.governor.ny.gov/news/governor-hochul-signs-legislation-require-warning-labels-social-media-platforms\"><ins>now require</ins></a> social media platforms to display warning labels similar to those found on cigarettes. <a href=\"https://legislation.nysenate.gov/pdf/bills/2025/S4505\"><ins>The bill</ins></a> was passed by the <a href=\"https://www.wxxinews.org/local-news/2025-06-19/new-york-state-lawmakers-pass-bill-to-add-mental-health-warning-label-f"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/music/what-we-listened-to-in-2025-201308584.html?src=rss",
+        "title": "What we listened to in 2025",
+        "link": "https://www.engadget.com/entertainment/music/what-we-listened-to-in-2025-201308584.html?src=rss",
+        "published": "Fri, 26 Dec 2025 20:13:08 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If streaming services\u2019 <a class=\"link\" href=\"https://www.engadget.com/entertainment/music/spotify-wrapped-2025-is-here-and-now-its-a-competition-130052418.html\" target=\"_blank\">year-in-review</a> campaigns have shown us anything, it\u2019s that we\u2019ve spent a staggering amount of time drowning out the hum of everyday life with music, podcasts and audio series. And with some incredible new releases this year, we were really eatin\u2019 good. Here are some of the Engadget team\u2019s favorite things we listene"
+    },
+    {
+        "id": "https://nesbitt.io/2025/12/26/how-uv-got-so-fast.html",
+        "title": "How uv got so fast",
+        "link": "https://nesbitt.io/2025/12/26/how-uv-got-so-fast.html",
+        "published": "Fri, 26 Dec 2025 17:13:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46393992\">Comments</a>"
     }
 ]
